# post-train-engine

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
configs/: gsm8k_api_smoke.yaml  gsm8k_hyperbolic_api_smoke.yaml  gsm8k_runpod_300step.yaml  gsm8k_runpod_300step_4gpu.yaml  gsm8k_runpod_r4.yaml  gsm8k_runpod_smoke.yaml  gsm8k_tiny_dryrun.yaml
docs/: flywheel_audit.md  lean_flywheel_plan.md  runpod_deployment.md
post_train_engine/: __init__.py
requirements/: runpod.txt
scripts/: benchmark_runpod_eval.py  check_cuda_stack.py  check_distributed_cuda.py  codex_uv_run.ps1  runpod_preflight.py
tests/: test_agentic_rl_contracts.py  test_api_hillclimb.py  test_architecture_contracts.py  test_artifact_bundle_cli.py  test_campaign_store.py  test_checkpoint_lifecycle.py  test_checkpoint_retention.py  test_checkpoint_security.py  test_cli_run_dispatch.py  test_data_overlap.py  test_env.py  test_eval_harness.py  test_eval_statistics.py  test_evaluation_roles.py  test_evidence_safety.py  test_exact_math_engine.py  test_flywheel_evidence.py  test_generation_backends.py  test_gpu_runners.py  test_grpo_config.py  test_gsm8k_cli_contracts.py  test_gsm8k_curriculum.py  test_gsm8k_flywheel_bundle.py  test_gsm8k_reward.py  test_gsm8k_task.py  test_hf_eval_cli.py  test_http_transport.py  test_hub_identity.py  test_method_training_views.py  test_on_policy_distillation.py  test_opsd_context.py  test_opsd_loss.py  test_optimizer_defaults.py  test_probe_and_difficulty.py  test_project_metadata.py  test_promotion_artifact_conversion.py  (+18 more)
(+127 files in other folders)
