[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "post-train-engine"
version = "0.0.1"
description = "Eval driven post-training experiment engine."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "huggingface_hub",
    "numpy",
    "pydantic>=2,<3",
    "pyyaml",
    "safetensors",
    "torch",
    "transformers",
]

[project.scripts]
pte = "post_train_engine.cli.main:main"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "pytest",
    "ruff",
]
rlvr = [
    "accelerate",
    "peft",
    "trl",
]
optimizer = [
    "muon-optimizer @ git+https://github.com/KellerJordan/Muon@f98f1cacc0263b04290753e32be8d498c1efc806",
]
gpu = [
    "muon-optimizer @ git+https://github.com/KellerJordan/Muon@f98f1cacc0263b04290753e32be8d498c1efc806",
]
chaineval = [
    "bert-score",
    "rouge-score",
    "sentence-transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "F811"]
